# cockpit-tools

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  README.pt-br.md  announcements.json  package-lock.json  package.json
.github/workflows/: build-matrix.yml  cockpit-patched-macos.yml  codex-patched-macos-arm64.yml  codex-patched-macos-build.yml  platform-packages.yml  release.yml
Casks/: cockpit-tools.rb
crates/cockpit-cli/: Cargo.toml
crates/cockpit-cli/src/: main.rs
crates/cockpit-core/: Cargo.toml
docs/: CODEX_API_SERVICE_HANDOFF.md  platform-hot-update-architecture.md  platform-integration-guide.md
docs/maintenance/: API_KEY_ROUTING_HANDOFF.md
platform-packages/: index.json
platform-packages/antigravity/: manifest.json
platform-packages/antigravity_ide/: manifest.json
platform-packages/claude_manager/: manifest.json
platform-packages/codebuddy/: manifest.json
platform-packages/codebuddy_cn/: manifest.json
platform-packages/codex/: manifest.json
scripts/: check_locales.cjs  local-platform-dev-server.cjs  platform-dev-serve.cjs  platform-ui-dev.cjs  tauri-dev.cjs  tauri-dist-dev.cjs  tauri.cjs  test_codex_additional_quota_spark.cjs  test_codex_helpers_shipped.mjs  update_locales.cjs  verify-platform-packages.cjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
tests/: codexBatchImportPortal.test.ts  codexBatchImportQueue.test.ts  codexLocalAccessAccounts.test.ts  codexSessionFilters.test.ts  updaterReleaseNotes.test.ts
(+473 files in other folders)
