[package]
name = "cockpit-cli"
version = "0.1.0"
edition = "2021"
authors = ["jlcodes"]
license = "CC-BY-NC-SA-4.0"

[dependencies]
cockpit-core = { path = "../cockpit-core" }
clap = { version = "4.5", features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
colored = "2.1"
tabled = "0.15"
